[gd_scene load_steps=17 format=2]

[ext_resource path="res://soldier_command.gd" type="Script" id=1]
[ext_resource path="res://resource/enemies/soldier/ship_left.png" type="Texture" id=2]
[ext_resource path="res://resource/enemies/soldier/step_back.png" type="Texture" id=3]
[ext_resource path="res://resource/enemies/soldier/speed3.png" type="Texture" id=4]
[ext_resource path="res://resource/enemies/soldier/speed1.png" type="Texture" id=5]
[ext_resource path="res://resource/enemies/soldier/ship_right.png" type="Texture" id=6]
[ext_resource path="res://resource/enemies/soldier/speed12.png" type="Texture" id=7]
[ext_resource path="res://explotion_sprite.tscn" type="PackedScene" id=8]
[ext_resource path="res://explotion.tscn" type="PackedScene" id=9]
[ext_resource path="res://ship_collision.tscn" type="PackedScene" id=10]
[ext_resource path="res://ship_collision_animation.tscn" type="PackedScene" id=11]
[ext_resource path="res://direction_collision.tscn" type="PackedScene" id=12]
[ext_resource path="res://head_east.tscn" type="PackedScene" id=17]
[ext_resource path="res://radar.tscn" type="PackedScene" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "desplace_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "desplace_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "speed1",
"speed": 100.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "speed3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "step_back",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.0
height = 0.0

[node name="enemy_soldier" type="Area2D"]
collision_layer = 4
collision_mask = 59
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.483826, 0 )
scale = Vector2( 0.151062, 0.118333 )
frames = SubResource( 1 )
animation = "speed1"
playing = true
offset = Vector2( -133, 0 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="explotion_animation" parent="." instance=ExtResource( 9 )]
playback_speed = 6.0

[node name="explotion" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, 0 )

[node name="ship_collision_animation" parent="." instance=ExtResource( 11 )]

[node name="ship_collision" parent="." instance=ExtResource( 10 )]
frame = 0

[node name="head" parent="." instance=ExtResource( 17 )]
position = Vector2( 38, -1 )

[node name="radar" parent="." instance=ExtResource( 32 )]
position = Vector2( 1, 0 )
collision_layer = 32768
collision_mask = 9

[node name="attack_rate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="direction_collision" parent="." instance=ExtResource( 12 )]

[connection signal="area_entered" from="." to="." method="_on_enemy_soldier_area_entered"]
[connection signal="animation_finished" from="explotion_animation" to="." method="_on_explotion_animation_animation_finished"]
[connection signal="animation_finished" from="ship_collision_animation" to="." method="_on_ship_collision_animation_animation_finished"]
[connection signal="enemy" from="radar" to="." method="_on_radar_enemy"]
[connection signal="enemy_exited" from="radar" to="." method="_on_radar_enemy_exited"]
[connection signal="timeout" from="attack_rate" to="." method="_on_attack_rate_timeout"]
